--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/mq.css">
     <title>Login</title>
 </head>
 <body>
@@ -16,7 +17,7 @@
                 <h1>Login</h1>
                 <p>Seja Bem Vindo(a) novamente. Faça o login para acessar sua conta</p>
                 <form action="arquivo.php" method="post">
-                    
+
                 </form>
             </div>
         </section>
